monticore-generator/src/test/resources/cocos/invalid/A4098/A4098.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4098;

grammar A4098 extends cocos.invalid.A4098.A4098Super{

  Foo = "foo";

}
